--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "dependencies": {
         "@ai-sdk/mistral": "^1.1.14",
         "@ai-sdk/react": "^1.1.21",
+        "@openrouter/ai-sdk-provider": "^0.4.3",
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-scroll-area": "^1.2.3",
         "@radix-ui/react-slot": "^1.1.2",
+        "@t3-oss/env-nextjs": "^0.12.0",
         "@tavily/core": "^0.3.1",
         "ai": "^4.1.54",
         "class-variance-authority": "^0.7.1",
