--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "@ai-sdk/mistral": "^1.1.14",
         "@ai-sdk/react": "^1.1.21",
         "@openrouter/ai-sdk-provider": "^0.4.3",
+        "@radix-ui/react-avatar": "^1.1.3",
+        "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-label": "^2.1.2",
         "@radix-ui/react-scroll-area": "^1.2.3",
         "@radix-ui/react-slot": "^1.1.2",
@@ -28,6 +30,13 @@
         "next-themes": "^0.4.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-markdown": "^9.1.0",
+        "react-syntax-highlighter": "^15.6.1",
+        "rehype-external-links": "^3.0.0",
+        "rehype-katex": "^7.0.1",
+        "rehype-raw": "^7.0.0",
+        "remark-gfm": "^4.0.1",
+        "remark-math": "^6.0.0",
         "sonner": "^2.0.1",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
@@ -38,6 +47,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@types/react-syntax-highlighter": "^15.5.13",
         "husky": "^9.1.7",
         "lint-staged": "^15.4.3",
         "prettier": "3.5.3",
