--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@ai-sdk/mistral": "^1.1.14",
         "@ai-sdk/react": "^1.1.21",
         "@openrouter/ai-sdk-provider": "^0.4.3",
+        "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-icons": "^1.3.2",
         "@radix-ui/react-label": "^2.1.2",
