--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "exa-js": "^1.5.11",
+        "geist": "^1.3.1",
         "lucide-react": "^0.477.0",
         "motion": "^12.4.10",
         "next": "15.2.1",
