--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
+        "@radix-ui/react-tooltip": "^1.1.8",
         "@t3-oss/env-nextjs": "^0.12.0",
         "@tavily/core": "^0.3.1",
         "ai": "^4.1.54",
