--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@radix-ui/react-tooltip": "^1.1.8",
         "@t3-oss/env-nextjs": "^0.12.0",
         "@tavily/core": "^0.3.1",
+        "@vercel/analytics": "^1.5.0",
         "ai": "^4.1.54",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
