--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "cmdk": "1.0.0",
         "exa-js": "^1.5.11",
         "geist": "^1.3.1",
+        "katex": "^0.16.21",
         "lucide-react": "^0.477.0",
         "motion": "^12.4.10",
         "next": "15.2.1",
