--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-markdown": "^9.1.0",
+        "react-scan": "^0.3.2",
         "react-syntax-highlighter": "^15.6.1",
         "rehype-external-links": "^3.0.0",
         "rehype-katex": "^7.0.1",
