--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@tavily/core": "^0.3.1",
         "@vercel/analytics": "^1.5.0",
         "ai": "^4.1.54",
+        "babel-plugin-react-compiler": "19.0.0-beta-3229e95-20250315",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
