--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@ai-sdk/cerebras": "^0.2.0",
         "@ai-sdk/groq": "^1.1.14",
         "@ai-sdk/mistral": "^1.1.14",
         "@ai-sdk/react": "^1.1.21",
