--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@radix-ui/react-tooltip": "^1.1.8",
         "@t3-oss/env-nextjs": "^0.12.0",
         "@tavily/core": "^0.3.3",
+        "@types/lodash": "^4.17.16",
         "@vercel/analytics": "^1.5.0",
         "ai": "^4.1.54",
         "babel-plugin-react-compiler": "19.0.0-beta-3229e95-20250315",
@@ -37,6 +38,7 @@
         "exa-js": "^1.5.11",
         "geist": "^1.3.1",
         "katex": "^0.16.21",
+        "lodash": "^4.17.21",
         "lucide-react": "^0.477.0",
         "motion": "^12.4.10",
         "next": "15.2.3",
