--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@ai-sdk/groq": "^1.1.14",
         "@ai-sdk/mistral": "^1.1.14",
         "@ai-sdk/react": "^1.1.21",
+        "@hookform/resolvers": "^5.0.1",
         "@openrouter/ai-sdk-provider": "^0.4.3",
         "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-avatar": "^1.1.3",
@@ -45,6 +46,7 @@
         "posthog-js": "^1.231.2",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-hook-form": "^7.55.0",
         "react-markdown": "^9.1.0",
         "react-scan": "^0.3.3",
         "react-syntax-highlighter": "^15.6.1",
