--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@ai-sdk/cerebras": "^0.2.0",
+        "@ai-sdk/google": "^1.2.11",
         "@ai-sdk/groq": "^1.1.14",
         "@ai-sdk/mistral": "^1.1.14",
         "@ai-sdk/react": "^1.1.21",
