--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@ai-sdk/anthropic": "^1.2.10",
         "@ai-sdk/cerebras": "^0.2.0",
-        "@ai-sdk/google": "^1.2.11",
+        "@ai-sdk/google": "^1.2.14",
         "@ai-sdk/groq": "^1.1.14",
         "@ai-sdk/mistral": "^1.1.14",
         "@ai-sdk/react": "^1.1.21",
@@ -31,7 +32,7 @@
         "@t3-oss/env-nextjs": "^0.12.0",
         "@tavily/core": "^0.3.3",
         "@types/lodash": "^4.17.16",
-        "ai": "^4.1.54",
+        "ai": "^4.3.11",
         "babel-plugin-react-compiler": "19.0.0-beta-3229e95-20250315",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
